docs/envoy/v1.21.0/_sources/api-v3/extensions/transport_sockets/quic/v3/quic_transport.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/transport_sockets/quic/v3/quic_transport.proto:

quic transport
==============




.. _envoy_v3_api_msg_extensions.transport_sockets.quic.v3.QuicDownstreamTransport:

extensions.transport_sockets.quic.v3.QuicDownstreamTransport
------------------------------------------------------------

:repo:`[extensions.transport_sockets.quic.v3.QuicDownstreamTransport proto] <api/envoy/extensions/transport_sockets/quic/v3/quic_transport.proto#L19>`

Configuration for Downstream QUIC transport socket. This provides Google's implementation of Google QUIC and IETF QUIC to Envoy.

.. code-block:: json

  {
    "downstream_tls_context": "{...}"
  }

.. _envoy_v3_api_field_extensions.transport_sockets.quic.v3.QuicDownstreamTransport.downstream_tls_context:

downstream_tls_context
  (:ref:`extensions.transport_sockets.tls.v3.DownstreamTlsContext <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.DownstreamTlsContext>`, *REQUIRED*) 
  


.. _envoy_v3_api_msg_extensions.transport_sockets.quic.v3.QuicUpstreamTransport:

extensions.transport_sockets.quic.v3.QuicUpstreamTransport
----------------------------------------------------------

:repo:`[extensions.transport_sockets.quic.v3.QuicUpstreamTransport proto] <api/envoy/extensions/transport_sockets/quic/v3/quic_transport.proto#L25>`

Configuration for Upstream QUIC transport socket. This provides Google's implementation of Google QUIC and IETF QUIC to Envoy.

.. code-block:: json

  {
    "upstream_tls_context": "{...}"
  }

.. _envoy_v3_api_field_extensions.transport_sockets.quic.v3.QuicUpstreamTransport.upstream_tls_context:

upstream_tls_context
  (:ref:`extensions.transport_sockets.tls.v3.UpstreamTlsContext <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.UpstreamTlsContext>`, *REQUIRED*) 
  

